changed /jump to /jumpmenu

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,5 +5,5 @@ api-version: 1.18
 authors: [ 5vl ]
 description: A trial project for DevRoom.
 commands:
-  jump:
-    description: Opens the main GUI
+  jumpmenu:
+    description: Opens the main jump GUI
